@@ -16,6 +16,7 @@
  * Put radio buttons on left on jacks add resources (#1217)
  * Widen URL entry on Jacks add resources page (#1218)
  * Handle 'pending' status from OpenGENI AMs. (#1221)
+ * Handle multiple 'services' tags in an RSpec. (#1222)
  * Error check arguments to do-edit-slice-member. (#1224)
  * Switch to Jacks stable (#1228)
 
